# junction

./: .clang-format  .clang-tidy  .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md
junction/: CMakeLists.txt  assert_override.cc  junction.cc  junction.cpp  junction.h  junction.hpp  libc_override.cc  limits.h  new_override.cc  perf.h  run.cc  run.h
junction-ctl/: CMakeLists.txt  Cargo.toml
junction-ctl/src/: control_request_generated.rs  control_response_generated.rs  main.rs
junction/base/: CMakeLists.txt  arch.cc  arch.h  bitmap.h  bits.h  byte_channel.h  compiler.h  containers.h  error.cc  error.h  expected.h  finally.h  format.h  interval_set.h  intrusive.h  intrusive_list.h  io.cc  io.h  io_test.cc  message_channel.h  slab_list.h  slab_list_test.cc  string.h  time.cc  time.h  uid.h
junction/bindings/: CMakeLists.txt  Makefile  log.cc  log.h  net.h  rcu.h  runtime.cc  runtime.h  stack.h  storage.h  switch.S  sync.cc  sync.h  test.cc  thread.cc  thread.h  timer.cc  timer.h  wait.h
junction/control/: CMakeLists.txt  control_request.fbs  control_request_generated.h  control_response.fbs  control_response_generated.h  ctl_conn.h  serverless.cc  serverless.h  webctl.cc
junction/filesystem/: CMakeLists.txt  file.cpp  file.hpp  filesystem.cpp  filesystem.hpp  filesystem_test.cpp  fs_testenv.cc  fs_testenv.cpp  linuxfile.cc  linuxfile.cpp  linuxfile.h  linuxfile.hpp  linuxfile_test.cc  linuxfile_test.cpp  linuxfs.cc  linuxfs.cpp  linuxfs.h  linuxfs.hpp  linuxfs_test.cc  linuxfs_test.cpp  memfs.cc  memfs.h  memfs_test.cc  memfsfile.cc  memfsfile.h  vfs.cc  vfs.h
junction/fs/: CMakeLists.txt  advisory_lock.cc  advisory_lock.h  core.cc  dev.cc  dev.h  file.cc  file.h  fs.h  junction_file.h  pipe.cc  pipe.h  poll.cc  poll.h  stdiofile.cc  stdiofile.h
junction/fs/linuxfs/: dir.cc  linuxfile.cc  linuxfile.h  linuxfs.cc  linuxfs.h
junction/fs/memfs/: dir.cc  memfs.cc  memfs.h  memfs_test.cc  memfsfile.h  misc.cc
junction/fs/procfs/: ._procfs.cc  procfs.cc  procfs.h  seqfile.h
junction/kernel/: CMakeLists.txt  elf.cc  elf.h  eventfd.cc  exec.S  exec.cc  exec.h  file.cc  file.h  fs.h  futex.cc  futex.h  itimer.cc  itimer.h  jif.cc  jif.h  ksys.S  ksys.h  misc.cc  mm.cc  mm.h  pipe.cc  poll.cc  poll.h  proc.cc  proc.h  random.cc  rseq.h  sched.cc  sigframe.cc  sigframe.h  signal.cc  signal.h  special_files.cc  stdiofile.cc  stdiofile.h  time.cc  time.h  trapframe.cc  trapframe.h  (+2 more)
junction/memorysystem/: CMakeLists.txt  memorysystem.cpp  memorysystem.hpp  memorysystem_test.cpp
junction/net/: CMakeLists.txt  caladan_poll.cc  caladan_poll.h  net.cc  netlink.cc  netlink.h  socket.h  socket_placeholder.cc  socket_placeholder.h  tcp_bench_test.cc  tcp_established_socket.h  tcp_listener_socket.cc  tcp_listener_socket.h  tcp_socket.h  tcp_unestablished_socket.h  udp_bench_test.cc  udp_socket.h  unix.h  unix_socket.cc  unix_socket_test_dgram.cc
junction/samples/: CMakeLists.txt  hello_world.cpp  unix_socket_test.cc
junction/samples/cereal/: CMakeLists.txt  dumb.h  polymorph.cc  polymorph.h  smart.cc
junction/samples/filesystem/: CMakeLists.txt
junction/samples/hello_world/: CMakeLists.txt  hello_world.cc
junction/samples/nbody/: CMakeLists.txt  nbody.cc  nbody.f90  nbody.java  nbody.js  nbody.php  nbody.pl  nbody.py  nbody.rs  nbody.ruby  nbody_go.go
junction/samples/netbench_udp/: CMakeLists.txt  README.md  fake_worker.cc  fake_worker.h  netbench_udp.cc  proto.h  timing.cc  timing.h
junction/samples/netperf_tcp/: CMakeLists.txt  server.cc
junction/samples/snapshots/: .gitignore  CMakeLists.txt  README.md  python_resizer.py
junction/samples/tcp/: CMakeLists.txt  README.md  client.cc  server.cc
junction/samples/udp/: CMakeLists.txt  README.md  client.cc  server.cc
junction/shim/: CMakeLists.txt  child_test.cc  frontend.cc  functions.txt  shim.h  shimjmp_tbl.py  sync.h  tbench_test.cc
junction/shim/backend/: init.cc  init.h  sem.cc  sync.cc  thread.cc
junction/shim/preload/: thread.cc
junction/snapshot/: CMakeLists.txt  cereal.h  file.h  jif.cc  jif.h  mm.h  pod.h  proc.cc  proc.h  snapshot.cc  snapshot.h  snapshot_elf.cc  snapshot_jif.cc
junction/syscall/: CMakeLists.txt  dispatch.cpp  dispatch.hpp  dispatch_test.cpp  entry.S  entry.h  glibc.cpp  handlers.cpp  handlers.hpp  intercept.cpp  intercept.hpp  no_intercept.S  no_intercept.h  seccomp.cc  seccomp.cpp  seccomp.h  seccomp.hpp  seccomp_bpf.h  seccomp_bpf.hpp  seccomp_filtering.cpp  seccomp_filtering.hpp  seccomp_reporter.hpp  strace.cc  strace.h  syscall.cc  syscall.cpp  syscall.h  syscall_benchmark.cc  syscall_benchmark.cpp  syscall_defs.txt  syscall_testenv.cc  syscall_testenv.cpp  systbl.h  systbl.hpp  systbl.py  usys.txt  vdso.h  zpoline.cc
junction/syscall/vdso/: vdso.S  vdso.ld  vdso.lds  vdso_inc.S
lib/: CMakeLists.txt
lib/patches/caladan/: 0001-no-op-pthread_mutex_destroy-to-let-libc-exit-handler.patch  0001-runtime-export-access-to-stack-pointer-for-junction.patch  0001-shim-nits.patch  0002-runtime-export-access-to-stack-pointer-for-junction.patch  0002-set-build-and-config-options.patch  0002-set-config-optimize-to-true.patch  0002-set-config-options.patch  0003-base-some-tweaks-to-make-things-easier-in-junction.patch  0003-runtime-allow-uthreads-to-set-their-own-fsbase-value.patch  0003-set-config-optimize-to-true.patch  0004-base-some-tweaks-to-make-things-easier-in-junction.patch  0004-runtime-add-thread_create_nostack.patch  0004-runtime-allow-uthreads-to-set-their-own-fsbase-value.patch  0004-tcp-increase-window-size.patch  0005-base-runtime-make-all-runtime-syscalls-from-a-set-in.patch  0005-base-use-write-syscall-directly-for-logging.patch  0005-report-transactions-second-as-well.patch  0005-runtime-add-thread_create_nostack.patch  0006-base-don-t-track-physical-page-numbers.patch  0006-enlarge-stacks.patch  0006-nit.patch  0006-remove-shim-tls-implementation.patch  (+121 more)
src/: CMakeLists.txt
src/filesystem/: file.cpp  filesystem.cpp
src/memorysystem/: memorysystem.cpp
src/syscall/: handlers.cpp  intercept.c
test/: CMakeLists.txt  filesystem_test.cpp
(+171 files in other folders)
