[package]
name = "junction-ctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
easy-repl = "0.2.1"

flatbuffers = { path = "../lib/flatbuffers/rust/flatbuffers" }
